<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_main_background">

    <LinearLayout
        android:id="@+id/spine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/quote_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/main_quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:textColor="@color/mainPrimaryDark"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/mainPrimaryDark"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_shop_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/event_space"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="17dp"
                android:background="@drawable/shape_main_item_cal"
                android:onClick="goEvents">

                <TextView
                    android:id="@+id/main_event1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/main_event2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/main_event3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/shop_space"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="17dp"
                android:background="@drawable/shape_main_item_shop"
                android:onClick="goShopping">
                <TextView
                    android:id="@+id/main_shop1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/main_shop2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/main_shop3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reminder_goal_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/reminder_space"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="17dp"
                android:background="@drawable/shape_main_item_rem"
                android:onClick="goReminders">
                <TextView
                    android:id="@+id/main_rem1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"
                    android:lines="1"
                    android:ellipsize="end"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/main_rem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"
                    android:lines="1"
                    android:ellipsize="end"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/main_rem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"
                    android:lines="1"
                    android:ellipsize="end"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/goal_space"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="17dp"
                android:background="@drawable/shape_main_item_goal"
                android:onClick="goGoals">
                <TextView
                    android:id="@+id/main_goal1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/main_goal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/main_goal3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"
                    android:textColor="@color/mainAccent"
                    android:fontFamily="sans-serif-light"/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/checks_blank_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/checks_space"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="17dp"
            android:background="@drawable/shape_main_item_checks"
            android:onClick="goTodos">
            <TextView
                android:id="@+id/main_check1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textColor="@color/mainAccent"
                android:fontFamily="sans-serif-light"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/main_check2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textColor="@color/mainAccent"
                android:fontFamily="sans-serif-light"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/main_check3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textColor="@color/mainAccent"
                android:fontFamily="sans-serif-light"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/blank_space"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="17dp"/>
    </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>