<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TodosActivity"
    android:background="@drawable/shape_main_background">

    <FrameLayout
        android:id="@+id/checks_frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="?attr/actionBarSize" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/checks_navigationbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/checks_bottom_menu"
        app:itemIconTint="@drawable/selector_checks"
        app:itemTextColor="@drawable/selector_checks"
        app:itemBackground="@color/mainPrimaryDark"
        android:background="@color/mainPrimaryDark"
        />

</android.support.constraint.ConstraintLayout>